# backupTracker

./: BlocksAndLayers.hpp  CMakeLists.txt  DA_.hpp  IOTRansactor.hpp  SqClass.cpp  SqClass.h  _build  _log.hpp  arc.txt  base.h  config.json  data_and_structs.hpp  datasetAPI.hpp  db_buckets  dbqueries.hpp  dbquery.hpp  dispatcher.hpp  events.hpp  fileCache.hpp  fstab  insert.hpp  iocrud.hpp  layersHelper.hpp  layersIO.hpp  layers_API.hpp  log.cpp  log.html  log_html_x.html  main.cpp  makefile  memmgr.hpp  miniCache.hpp  mini_cache.hpp  mysql.cpp  needed_sql.txt  notes_and_comments.cpp  out_test.html  rebuild  run  serialiser.hpp  (+11 more)
DA/: DA_.hpp  typedef.hpp
IO/: IOTRansactor.hpp
blocks/: dbqueries.hpp  serialiser.hpp  uid_and_chk.hpp
blocks/utils/: utils.hpp
cache/: fileCache.hpp  memmgr.hpp  minicache.cpp  minicache.h
config/: config.cpp  config.h
dataset/: datasetAPI.hpp
dispatch/: dispatcher.hpp
layers/: layersHelper.cpp  layersHelper.h  layersHelper.hpp  layersIO.hpp  layers_API.hpp  tempTable.hpp
log/: _log.hpp  log.cpp
oldDa/: DA_.hpp
scripts/: rebuild  run
shprota/: ReadFromBuff.cpp  ReadFromBuff.h  WriteToBuff.cpp  WriteToBuff.h  baseBuff.hpp
sql/: SqClass.cpp  SqClass.h  create.hpp  drop.hpp  insert.hpp  log.html  selectAndJoin.hpp  sqlGenerator.hpp  sqlcmdType.hpp  sqlcopy.hpp  test.sql
test/sql_layer_1/: db_buckets
test/sql_layer_2/: db_buckets
test/sql_layer_2/temp/: tempTable.hpp
test/sql_layer_3/: db_buckets
test/sql_layer_4/: db_buckets
test/sql_layer_5/: db_buckets
